[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/dream_by_sulamith-d2yvzyu.png" type="Texture" id=1]
[ext_resource path="res://oscillator.gd" type="Script" id=2]
[ext_resource path="res://node.gd" type="Script" id=3]
[ext_resource path="res://images/point96.png" type="Texture" id=4]

[node name="main" type="Node" index="0"]

[node name="background_layer" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags", "Theme" ]
__meta__ = {
"_edit_lock_": true
}

[node name="dream_by_sulamith-d2yvzyu" type="Sprite" parent="background_layer" index="0"]

position = Vector2( 319, 215 )
scale = Vector2( 1.41429, 1.90667 )
z_index = -100
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Oscillator" type="Node2D" parent="." index="1"]

script = ExtResource( 2 )

[node name="node_A" type="Node2D" parent="Oscillator" index="0"]

modulate = Color( 1, 1, 0, 1 )
position = Vector2( 156, 127 )
z_index = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="mass_A" type="Sprite" parent="Oscillator/node_A" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="node_B" type="Node2D" parent="Oscillator" index="1"]

position = Vector2( 365, 364 )
z_index = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="mass_B" type="Sprite" parent="Oscillator/node_B" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="node_C" type="Node2D" parent="Oscillator" index="2"]

position = Vector2( 592, 134 )
z_index = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="mass_C" type="Sprite" parent="Oscillator/node_C" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}


